k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mikrom-api-service
  namespace: mikrom-dev
  labels:
    app: mikrom-api
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: mikrom-api
